# audio_dev_kit_bsp

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  README.md  debug.gdb
.github/workflows/: cmake-multi-platform.yml
base/src/: CMakeLists.txt  README.md  compile_commands.json  toolchain.cmake
base/src/adc/: adc.cpp  adc.hpp  adc_interface.hpp
base/src/board/: board_interface.hpp  physical_board.cpp  physical_board.hpp
base/src/dma/: dma.cpp  dma.hpp  dma_defs.hpp
base/src/gpio/: gpio.cpp  gpio.hpp  gpio_defs.h
base/src/init/: README.md  main.cpp  startup.c  stm32h750.ld
base/src/spi/: dacx050y.hpp  spi.cpp  spi.hpp  spibus_interface.hpp
base/src/spi/example/: spi_device_example.cpp  spi_device_example.hpp  spi_example.cpp  spi_example.hpp
base/src/system/: README.md  board_defs.h  core_cm7.h  pin_defs.c  stm32h750xx.h  stm32h7xx.h  syscalls.c
base/src/test_test/: dac_test.cpp  device_test.cpp  hello_test.cpp
base/src/tests/: dac_test.cpp  test_adc.cpp  test_board.cpp  test_dma.cpp  test_gpio.cpp  test_helper.hpp  test_spi.cpp  test_timers.cpp  test_tinyusb.cpp  test_uart.cpp  test_usb_serial.cpp  tests.hpp
base/src/timer/: basic_timer.cpp  basic_timer.hpp
base/src/uart/: uart.cpp  uart.hpp
base/src/unit_tests/: hello_test.cpp
base/src/usb/: tusb_config.h  usb_descriptors.c  usb_serial.cpp  usb_serial.hpp
base/src/util/: README.md  util.c  util.h
